k8s/services/nextcloud/extra/collabora/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: collabora
          image: collabora/code
          ports:
            - name: http
              containerPort: 9980
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - MKNOD
