k8s/services/nextcloud/extra/collabora/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
