k8s/services/nextcloud/extra/collabora/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collabora
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - office.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: collabora
          port: 80
